// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextLink should render with chevron 1`] = `
<a
  class="link"
>
  Google
  <span
    class="root root right chevron"
  >
    mock svg
  </span>
</a>
`;

exports[`TextLink should render with children 1`] = `
<a
  class="link"
>
  Google
</a>
`;

exports[`TextLink should render with className 1`] = `
<a
  class="link foo"
/>
`;

exports[`TextLink should render with defaults 1`] = `
<a
  class="link"
/>
`;
